<resources>
    <string name="app_name">QF6 API Demo</string>
    <string name="rx_mode_hint">NOTE: The device is currently in RX mode.\nOnly inputs from TLT-SRC-3200 are accepted.</string>
    <string name="rx_mode_power_toggle">IR ON/OFF Switch:</string>
    <string name="rx_mode_hint2">Last Received Input:</string>
    <string name="rx_mode_unknown_input">Waiting for input…</string>
    <string name="rx_mode_goto_learn">Learning Functions</string>
    <string name="rx_mode_goto_database">Database Functions</string>
    <string name="rx_mode_off_hint">IR Functions Suspended</string>
    <string name="db_mode_hintBrand">Brand</string>
    <string name="db_mode_hintDevice">Device</string>
    <string name="db_mode_hintRemote">Please select remote first…</string>
    <string name="db_mode_btnPower">ON/OFF</string>
    <string name="db_mode_btn1">1</string>
    <string name="db_mode_btn2">2</string>
    <string name="db_mode_btn3">3</string>
    <string name="db_mode_btn4">4</string>
    <string name="db_mode_btn5">5</string>
    <string name="db_mode_btn6">6</string>
    <string name="db_mode_btn7">7</string>
    <string name="db_mode_btn8">8</string>
    <string name="db_mode_btn9">9</string>
    <string name="db_mode_btnBack">Back</string>
    <string name="db_mode_btn0">0</string>
    <string name="db_mode_btnEnter">ENT</string>
    <string name="db_mode_btnChUp">CH UP</string>
    <string name="db_mode_btnChDn">CH DN</string>
    <string name="db_mode_btnVolUp">VOL UP</string>
    <string name="db_mode_btnVolDn">VOL DN</string>
    <string name="ln_mode_slot0">Slot 0</string>
    <string name="ln_mode_slot1">Slot 1</string>
    <string name="ln_mode_slot2">Slot 2</string>
    <string name="ln_mode_slot3">Slot 3</string>
    <string name="ln_mode_slot4">Slot 4</string>
    <string name="ln_mode_statusLabel">Status:</string>
    <string name="ln_mode_ready">Ready</string>
    <string name="ln_mode_learn">Learn</string>
    <string name="ln_mode_send">Send</string>
</resources>
