<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_slot0"
        android:id="@+id/radioButton0"
        android:layout_marginStart="363dp"
        android:layout_marginTop="151dp"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_slot1"
        android:id="@+id/radioButton1"
        android:layout_below="@+id/radioButton0"
        android:layout_alignStart="@+id/radioButton0"
        android:textSize="40sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_slot2"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton1"
        android:layout_alignStart="@+id/radioButton1"
        android:textSize="40sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_slot3"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        android:layout_alignStart="@+id/radioButton2"
        android:textSize="40sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_slot4"
        android:id="@+id/radioButton4"
        android:layout_below="@+id/radioButton3"
        android:layout_alignStart="@+id/radioButton3"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_statusLabel"
        android:id="@+id/statusLabel"
        android:layout_marginStart="80dp"
        android:textSize="40sp"
        android:textColor="#000dff"
        android:layout_alignTop="@+id/radioButton0"
        android:layout_toEndOf="@+id/radioButton0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_ready"
        android:id="@+id/status"
        android:layout_alignTop="@+id/statusLabel"
        android:layout_toEndOf="@+id/statusLabel"
        android:layout_marginStart="54dp"
        android:textSize="40sp"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_learn"
        android:id="@+id/btnLearn"
        android:textSize="50sp"
        android:layout_above="@+id/radioButton3"
        android:layout_toEndOf="@+id/statusLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln_mode_send"
        android:id="@+id/btnSend"
        android:textSize="50sp"
        android:layout_alignBottom="@+id/radioButton4"
        android:layout_toEndOf="@+id/statusLabel" />

</RelativeLayout>