<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_mode_hint"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_marginStart="199dp"
        android:textColor="#ff0000"
        android:layout_marginTop="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_mode_hint2"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="30sp"
        android:textColor="#000dff"
        android:text="@string/rx_mode_unknown_input"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView7"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_mode_goto_learn"
        android:id="@+id/learning"
        android:layout_marginBottom="68dp"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_mode_goto_database"
        android:id="@+id/database"
        android:layout_alignTop="@+id/learning"
        android:layout_toEndOf="@+id/textView8"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_mode_power_toggle"
        android:id="@+id/textView9"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <ToggleButton
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/toggleButton"
        android:textSize="30sp"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:checked="false" />

</RelativeLayout>